Article viewing and Filtering
User Stories:
1. User can click on an article and navigate to the full article.
2. User can filter article search based on Begin date, Sort order and News desk values.
3. User selections are persisted for subsequent searches using SharedPreferences.

Tasks:
1. Used Parceler library to communicate data.
2. Used a modal overlay instead of a filter settings activity.
3. Used vector drawable instead of icons.
4. Minor code cleanup.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
     <string name="action_settings">Settings</string>
     <string name="hintsearch">Enter your search here</string>
     <string name="search">Search</string>
+    <string name="beginDate">Begin Date</string>
+    <string name="sortOrder">Sort Order</string>
+    <string name="newsDeskValues">News desk values</string>
+    <string name="save">Save</string>
+    <string name="newsdesk1">Books</string>
+    <string name="newsdesk2">Sports</string>
+    <string name="newsdesk3">Science</string>
+
+    <string-array name="sortorder_array">
+        <item>Oldest</item>
+        <item>Newest</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
